--- a/src/sass/components/_answerBlock.scss
+++ b/src/sass/components/_answerBlock.scss
@@ -2,10 +2,11 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
+    height: 360px;
 }
 
 .answerBlock-item {
-    width: 500px;
+    width: 550px;
     border: solid 1px $yellow;
 }
 
@@ -17,9 +18,15 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 40px;
+        height: 100%;
         border: solid 1px $yellow;
+        cursor: pointer;
     }
+}
+
+.track-info {
+    padding: 20px;
+    color: $light;
 }
 
 .nextLevel {
