--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,8 +1,10 @@
 @import './abstract/constants';
 @import './abstract/mixin';
 
+@import './base/fonts';
 @import './base/base';
 
 @import './components/header';
 @import './components/questionBlock';
 @import './components/answerBlock';
+@import './components/infoTrack';
