feat: add responsive

--- a/src/sass/abstract/_constants.scss
+++ b/src/sass/abstract/_constants.scss
@@ -1,9 +1,9 @@
 $content-width: 1200px;
 $tablet-width: 1020px;
-$mobile-width: 710px;
-$mobile_small-width: 390px;
+$mobile-width: 510px;
 
 $dark: #111;
 $yellow: #a49009;
 $light: #fcfbfb;
-$brown: #615049;
+$background: #323030;
+$grey: #868686;
