--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,3 +8,5 @@
 @import './components/questionBlock';
 @import './components/answerBlock';
 @import './components/infoTrack';
+@import './components/modalBlock';
+@import './components/player';
