--- a/src/sass/components/_answerBlock.scss
+++ b/src/sass/components/_answerBlock.scss
@@ -3,33 +3,88 @@
     justify-content: space-between;
     margin-bottom: 20px;
     height: 360px;
+    @include media-laptop {
+        flex-direction: column;
+        height: 100%;
+    }
 }
 
 .answerBlock-item {
     width: 550px;
-    border: solid 1px $yellow;
+    border: solid 1px $grey;
+    background-color: $background;
+    border-radius: 5px;
+    @include media-laptop {
+        width: 100%;
+    }
 }
 
 .options {
     color: $yellow;
     display: flex;
     flex-direction: column;
+    @include media-laptop {
+        margin-bottom: 15px;
+    }
     &-item {
+        padding: 0 20px;
         display: flex;
         align-items: center;
-        justify-content: center;
         height: 100%;
-        border: solid 1px $yellow;
+        border-bottom: solid 1px $grey;
         cursor: pointer;
+        &:last-child {
+            border-bottom: none;
+        }
+        &:hover {
+            background-color: #28271d;
+        }
+        @include media-laptop {
+            height: 45px;
+        }
+        @include media-mobile {
+            font-size: 10px;
+        }
     }
 }
 
 .track-info {
     padding: 20px;
     color: $light;
+    & .rhap_container {
+        border: none;
+        margin-bottom: 10px;
+        @include media-mobile {
+            margin-bottom: 25px;
+        }
+    }
 }
 
-.nextLevel {
+.next-level {
     width: 100%;
     height: 50px;
+    border-radius: 5px;
+    background-color: $background;
+    color: $light;
+    font-size: 25px;
+    &_active {
+        background-color: $yellow;
+    }
+}
+
+.answer-indicator {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    margin-right: 15px;
+    border-radius: 50%;
+    background-color: #444;
+}
+
+.success {
+    background-color: #13cc77;
+}
+
+.error {
+    background-color: red;
 }
