--- a/src/sass/components/_infoTrack.scss
+++ b/src/sass/components/_infoTrack.scss
@@ -1,3 +1,30 @@
 .track-info-group {
     display: flex;
+    margin-bottom: 10px;
+    &-titles {
+        width: 100%;
+    }
+    &_name{
+        padding: 5px 0;
+    }
+    &_year {
+        padding: 10px 0px;
+        border-top: 1px solid $grey;
+        border-bottom: 1px solid $grey;
+    }
+    &_image {
+        object-fit: contain;
+        border-radius: 15px;
+        margin-right: 30px;
+        @include media-mobile {
+            margin: 0 auto;
+        }
+    }
+    @include media-mobile {
+        flex-direction: column;
+    }
+}
+
+.track-info-description {
+    font-size: 13px;;
 }
