--- a/src/sass/components/_questionBlock.scss
+++ b/src/sass/components/_questionBlock.scss
@@ -1,24 +1,20 @@
 .questionBlock-container {
     width: 100%;
     padding: 10px;
-    background-color: $brown;
-    border-radius: 15px;
+    background-color: $background;
+    border-radius: 5px;
     display: flex;
     margin-bottom: 50px;
+    @include media-tablet {
+        flex-direction: column;
+    }
 }
 
 .questionBlock-image {
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 15px;
-}
-
-.player {
-    width: calc(100% - 200px);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    &>audio {
-        width: 600px;
+    margin-right: 30px;
+    @include media-tablet {
+        margin: 0 auto;
     }
 }
