feat: fix styles and showing modal block

--- a/src/sass/components/_answerBlock.scss
+++ b/src/sass/components/_answerBlock.scss
@@ -67,6 +67,7 @@
     background-color: $background;
     color: $light;
     font-size: 25px;
+    transition: 0.3s;
     &_active {
         background-color: $yellow;
     }
