--- a/src/sass/components/_modalBlock.scss
+++ b/src/sass/components/_modalBlock.scss
@@ -12,39 +12,52 @@
 }
 
 .score-block {
-    width: 400px;
-    margin: auto;
-    background-color: $light;
+    width: 100%;
+    background-color: $background;
     color: $yellow;
     border-radius: 8px;
     padding: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 22px;
+    font-size: 24px;
+    @include media-mobile {
+        font-size: 16px;
+    }
+    &_title {
+        font-size: 54px;
+        letter-spacing: 6px;
+        @include media-mobile {
+            font-size: 24px;
+            letter-spacing: 3px;
+        }
+    }
     & > * {
         margin-bottom: 10px;
+        text-align: center;
     }
     &> img {
-        width: 100%;
         height: 320px;
         @include media-mobile {
             height: 250px;
         }
     }
     & button {
-        width: 100px;
+        margin-top: 80px;
+        width: 100%;
         height: 50px;
         border-radius: 5px;
         background-color: $yellow;
         color: $light;
-        font-size: 16px;
+        font-size: 22px;
+        transition: 0.3s;
         &:hover {
             box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+            background-color: #d4c243;
         }
-    }
-    @include media-mobile {
-        width: 320px;
+        @include media-mobile {
+            font-size: 14px;
+        }
     }
 }
 
