fix: fix image style

--- a/src/sass/components/_infoTrack.scss
+++ b/src/sass/components/_infoTrack.scss
@@ -14,7 +14,7 @@
         border-bottom: 1px solid $grey;
     }
     &_image {
-        object-fit: contain;
+        object-fit: cover;
         border-radius: 15px;
         margin-right: 30px;
         @include media-mobile {
